[#101] Fix: LexoRankUtil null 처리